feature: add create, edit and validate club

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,7 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 ##spring.datasource.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
-#
-#w
 #spring.jpa.show-sql=true
-#
-
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/rungroupcourse
 spring.datasource.username=postgres
@@ -16,12 +12,12 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.packagesToScan=com.wayneyong.web.models
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.packagesToScan=com.wayneyong.web.models
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
-server.port=8080
+server.port=8081
